--- a/main.html
+++ b/main.html
@@ -14,7 +14,8 @@
     <li>GET <em>/users:ID</em> - hämtar specifik användare</li>
     <li>POST<em>/users</em> - skapar en ny användare med hashat lösenord, accepterar JSON objekt på formatet {"name": "", "username": "", "password": "", "email": ""}. <code>userId</code> är obligatoriskt.</li>
     <li>PUT <em>/users:id</em> - skapa ändringar i en registrerad användare i insomnia.</li>
-    <li>POST<em>/login</em> - inloggning, accepterar JSON-objekt på formatet {"username": "", "password": ""}.</li>
+    <li>POST<em>/login</em> - inloggning, accepterar JSON-objekt på formatet {"username": "", "password": ""}. Skapar en token för tillgång 
+    till user och user:Id via insomnia</li>
   </p>
 
 
